--- a/app/src/main/res/drawable/side_toolbar.xml
+++ b/app/src/main/res/drawable/side_toolbar.xml
@@ -6,5 +6,5 @@
         android:centerColor="#03A9F4"
         android:endColor="#2196F3"
         android:startColor="#FFFFFF"
-        android:type="linear" />
+        android:name="linear" />
 </shape>
